third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/freeze_combo_invalid.exp

Diagnostics:
error: cannot freeze local `s` since other mutable usages for this reference exist
   ┌─ tests/reference-safety/v1-tests/freeze_combo_invalid.move:27:9
   │
27 │         freeze(s);
   │         ^^^^^^^^^ frozen here
28 │         *x;
   │         -- used here
